more fixessss